--- a/helm/aws-ebs-volume-tagger/values.yaml
+++ b/helm/aws-ebs-volume-tagger/values.yaml
@@ -8,7 +8,7 @@ project:
 image:
   registry: quay.io
   name: giantswarm/aws-ebs-volume-tagger
-  tag: v0.0.1
+  tag: "[[ .Version ]]"
   pullPolicy: IfNotPresent
 
 schedule: "*/15 * * * *"
