--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@4.25.0
+  architect: giantswarm/architect@4.35.5
 
 workflows:
   version: 2
@@ -15,30 +15,12 @@ workflows:
             tags:
               only: /^v.*/
 
-      - architect/push-to-docker:
-          name: push-aws-ebs-volume-tagger-to-quay
+      - architect/push-to-registries:
           context: architect
-          image: "quay.io/giantswarm/aws-ebs-volume-tagger"
-          username_envar: "QUAY_USERNAME"
-          password_envar: "QUAY_PASSWORD"
-          requires:
-            - build-aws-ebs-volume-tagger
-          # Do this on every commit and when a new tag is created.
-          filters:
-            tags:
-              only: /^v.*/
-
-      - architect/push-to-docker:
-          name: push-aws-ebs-volume-tagger-to-aliyun
-          context: architect
-          image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/aws-ebs-volume-tagger"
-          username_envar: "ALIYUN_USERNAME"
-          password_envar: "ALIYUN_PASSWORD"
+          name: push-to-registries
           requires:
             - build-aws-ebs-volume-tagger
           filters:
-            branches:
-              only: master
             tags:
               only: /^v.*/
 
@@ -49,8 +31,7 @@ workflows:
           app_catalog_test: "giantswarm-playground-test-catalog"
           chart: "aws-ebs-volume-tagger"
           requires:
-            - push-aws-ebs-volume-tagger-to-quay
-          # Trigger job on git tag.
+            - push-to-registries
           filters:
             tags:
               only: /^v.*/
